[workspace]
members = [
    "day01-part-1",
    "day01-part-2",
    "day02-part-1",
    "day02-part-2",
    "day03-part-1",
    "day03-part-2",
    "day04-part-1",
    "day04-part-2",
    "day05-part-1",
    "day05-part-2",
    "day06-part-1",
    "day06-part-2",
    "day07",
    "day08",
    "day09",
]
